<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class ComDetalleCompra extends Model
{
    //
}
