<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class InvPrecioHistorico extends Model
{
    //
}
