<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class RepKardex extends Model
{
    //
}
