<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class VenDetalleVenta extends Model
{
    //
}
